alignment fix for top of ToC

--- a/volto/src/addons/volto-climatechange-elements/theme/ClimateChange/CcV2Preview/_ccV2ArticleView.scss
+++ b/volto/src/addons/volto-climatechange-elements/theme/ClimateChange/CcV2Preview/_ccV2ArticleView.scss
@@ -46,6 +46,7 @@
   top: 2rem;
   margin-bottom: govuk-spacing(8);
   padding-top: govuk-spacing(2);
+  margin-top: govuk-spacing(1);
   border-top: 3px solid govuk-colour('blue');
 
   .ccv2-article-nav--title {
